# ai-pet

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  build.ps1  install.ps1  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/config/: pet_config.json
cli_app/: Cargo.toml
cli_app/src/: config.rs  main.rs
cli_app/src/ai/: mod.rs
cli_app/src/ipc/: mod.rs
cli_app/src/window/: mod.rs
core_engine/: Cargo.toml
core_engine/src/: lib.rs
core_engine/src/animation/: mod.rs
core_engine/src/scripting/: mod.rs
core_engine/src/state_machine/: mod.rs
core_engine/src/timeline/: mod.rs
docs/: 01_epics_and_stories.md  02_technical_design.md  03_coding_standards.md  04_testing_and_verification.md  05_implementation_plan.md
tools/: slice_sprites.py
