[workspace]
resolver = "2"
members  = ["core_engine", "cli_app"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# --- Window & Rendering ---
winit  = "0.30"
pixels = "0.14"
image  = { version = "0.25", default-features = false, features = ["png"] }

# --- Async Runtime ---
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
async-trait = "0.1"

# --- HTTP ---
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- Serialization ---
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Logging ---
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Error Handling ---
thiserror = "2"
anyhow    = "1"
