[package]
name    = "cli_app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ai-pet"
path = "src/main.rs"

[features]
# 启用后跳过需要 display/IPC 的测试，供 CI 无头环境使用
ci = []

[dependencies]
core_engine = { path = "../core_engine" }

winit      = { workspace = true }
pixels     = { workspace = true }
image      = { workspace = true }
tokio      = { workspace = true }
async-trait = { workspace = true }
reqwest    = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
dirs-next  = "2"
dotenvy    = "0.15"
